# jop-applier

./: .gitignore  NEXT_AI_HANDOFF.md  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: beta_feedback.yml  bug_report.yml
docs/: beta-test-plan.md  user-guide.md
sidecar/: tsconfig.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  secure_store.rs  sidecar.rs  unsubscribe_server.rs
src-tauri/src/commands/: db.rs  mod.rs  secure_store.rs  sidecar.rs
src-tauri/src/db/: encryption.rs  mod.rs  models.rs  queries.rs  schema.rs
src-tauri/tests/: ai_cache_persistence_contract.rs  application_document_context_contract.rs  application_persistence_contract.rs  application_review_sidecar_contract.rs  application_workflow_state_contract.rs  communication_persistence_contract.rs  company_persistence_contract.rs  contact_persistence_contract.rs  database_encryption_contract.rs  document_persistence_contract.rs  follow_up_scheduler_contract.rs  job_persistence_contract.rs  notification_persistence_contract.rs  profile_settings_contract.rs  prospecting_persistence_contract.rs  scheduled_sidecar_runner_contract.rs  scheduled_task_persistence_contract.rs  schema_contract.rs  secure_store_contract.rs  sidecar_analytics_persistence_contract.rs  sidecar_cold_email_persistence_contract.rs  sidecar_email_response_persistence_contract.rs  sidecar_email_settings_contract.rs  sidecar_export_settings_contract.rs  sidecar_ipc_contract.rs  sidecar_job_discovery_persistence_contract.rs  sidecar_notification_persistence_contract.rs  sidecar_outreach_persistence_contract.rs  sidecar_prospecting_persistence_contract.rs
src-tauri/tests/common/: mod.rs
(+239 files in other folders)
