[package]
name = "careercaveman"
version = "0.1.0"
description = "Local-first AI career application assistant"
edition = "2021"

[lib]
name = "careercaveman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "careercaveman"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

