[package]
name = "careercaveman"
version = "0.1.0"
description = "Local-first AI career application assistant"
edition = "2021"

[lib]
name = "careercaveman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "careercaveman"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring-core = "1.0.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
